@@ -5,6 +5,7 @@ codebird-js - changelog
 + Fix _detectMultipart for statuses/update calls
 + Add Array.indexOf polyfill
 + Circumvent same-origin policy with CORS
++ Make oauth_authenticate and oauth_authorize asynchronous
 
 2.2.3 (2012-12-03)
 + Detect HTTP method properly when accessing multi HTTP method endpoint (account/settings)
